<resources>
    <string name="app_name">DH-Gallery</string>
    <string name="open_album">Open album</string>
    <string name="grant_permission">grant permission</string>
    <string name="permission_not_granted">Permission not granted \n App needs storage permission to view your Imaged and Videos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="capture_button_alt">Capture</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="gallery">Dallery</string>
    <string name="dhgallery">DHGallery</string>
    <string name="camera">Camera</string>
    <string name="like">Liked</string>
    <string name="flicker">Flicker</string>
    <string name="search_title">Search</string>
    <string name="title_of_image">The Title of a Image</string>
    <string name="viewimage">ViewImage</string>
    <string name="camera_activity_info">Capture some photos\n using App camera</string>
    <string name="liked_info">No Liked\n Images</string>
    <string name="flicker_info">Search\nto view photos</string>
    <string name="placeholder" />
    <string name="select_font">Font</string>
    <string name="edit_intro_text">Select Image\nForm Gallery</string>
    <string name="editor">Editor</string>
    <string name="add_text_hint">Add Text</string>
</resources>
