<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gallery"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/zero"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/nav_view"
        />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />

        <LinearLayout
            android:id="@+id/permission_rationale_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            tools:visibility="visible">



            <TextView
                android:id="@+id/permission_required_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/permission_required_text_dimen"
                android:layout_marginEnd="@dimen/permission_required_text_dimen"
                android:gravity="center"
                android:paddingTop="@dimen/permission_required_text_padding"
                android:text="@string/permission_not_granted" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/grant_permission_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/permission_required_text_padding"
                android:text="@string/grant_permission" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/welcome_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            tools:visibility="visible">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/open_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/permission_required_text_padding"
                android:text="@string/open_album" />

        </LinearLayout>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            app:itemTextColor="@drawable/bottom_navigation_item_colors"
            app:itemIconTint="@drawable/bottom_navigation_item_colors"
            app:itemTextAppearanceActive="@color/colorPrimary"
            android:background="@color/colorNavBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu"
            app:labelVisibilityMode="selected"
            android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>